--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -48,8 +48,9 @@
                     Margin="0,0,16,0"
                     VerticalOptions="Center"
                     HorizontalOptions="End"
-                    ItemsSource="{Binding LocaleIdCollection}"
-                    SelectedItem="{Binding CultureInfoAsStr}"
+                    ItemsSource="{Binding CultureInfoCollection}"
+                    ItemDisplayBinding="{Binding NativeName}"
+                    SelectedItem="{Binding SelectedCultureInfo}"
                     SelectedIndexChanged="LocalePicker_SelectedIndexChanged"/>
         </Grid>
     </Shell.TitleView>
