--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -397,6 +397,7 @@
                               InputTransparent="True">
                     <GraphicsView.Drawable>
                         <modelsDrawing:ColoredMap BindingContext="{x:Reference thisContentPage}"
+                                                  DirtyCount="{Binding DirtyCountOfColoredMap}"
                                                   TilesetSettingsVM="{Binding TileCropPageVM.TilesetSettingsVM}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
