切抜きカーソルが指すタイル

--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -586,15 +586,15 @@
             <Entry Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
-                   Text="{Binding SelectedTileIdAsBASE64, Mode=OneWay}"
+                   Text="{Binding CroppedCursorPointedTileIdAsBASE64, Mode=OneWay}"
                    IsReadOnly="True"
                    BackgroundColor="Transparent"/>
 
             <!-- タイル タイトル -->
             <Entry Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="4"
                    Placeholder="草原"
-                   Text="{Binding SelectedTileTitleAsStr}"
-                   IsEnabled="{Binding IsEnabledSelectedTileTitleAsStr}"/>
+                   Text="{Binding CroppedCursorPointedTileTitleAsStr}"
+                   IsEnabled="{Binding IsEnabledCroppedCursorPointedTileTitleAsStr}"/>
 
             <!--    ◆５段目 ヒント部
                     =================
@@ -611,7 +611,7 @@
                    HorizontalTextAlignment="Start"
                    VerticalTextAlignment="Start"
                    Padding="0,0,4,0"
-                   Text="{Binding SelectedTileIdAsPhoneticCode}"/>
+                   Text="{Binding CroppedCursorPointedTileIdAsPhoneticCode}"/>
         </Grid>
     </Grid>
 </ContentPage>
