--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -187,14 +187,14 @@
             <Entry Grid.Row="1" Grid.Column="4"
                    HorizontalTextAlignment="End"
                    Placeholder="0"
-                   Text="{Binding SourceGridPhaseLeftAsInt}"
+                   Text="{Binding GridPhaseSourceLeftAsInt}"
                    BackgroundColor="FloralWhite"/>
 
             <!-- グリッド位相上 -->
             <Entry Grid.Row="1" Grid.Column="5"
                    HorizontalTextAlignment="End"
                    Placeholder="0"
-                   Text="{Binding SourceGridPhaseTopAsInt}"
+                   Text="{Binding GridPhaseSourceTopAsInt}"
                    BackgroundColor="FloralWhite"/>
 
             <!-- 「グリッド\n１ます」 -->
@@ -382,7 +382,7 @@
                         <modelsDrawing:TilesetGrid BindingContext="{x:Reference thisContentPage}"
                                                    GridCanvasImageSize="{Binding TileCropPageVM.GridCanvasImageSize}"
                                                    HalfThicknessOfGridLineAsInt="{Binding TileCropPageVM.HalfThicknessOfGridLineAsInt}"
-                                                   GridPhase="{Binding TileCropPageVM.WorkingGridPhase}"
+                                                   GridPhaseWorkingLocation="{Binding TileCropPageVM.WorkingGridPhase}"
                                                    GridUnit="{Binding TileCropPageVM.WorkingGridUnit}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
